# Arithma

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
python/arithma/: __init__.py  _launcher.py
rust/arithma_core/: Cargo.toml
rust/arithma_core/src/: arithmetic.rs  constants.rs  default_constants.json  equation_solver.rs  fallback.rs  fourier.rs  function.rs  integer.rs  lib.rs  matrix.rs  pyfacade.rs  si_units.json  si_units.rs  tensor.rs  unit.rs  variable.rs
rust/arithma_core/src/calculus/: differentiation.rs  differentiation_iterative.rs  integration.rs  mod.rs
rust/arithma_core/src/expression/: iterative.rs  mod.rs  simplify.rs
rust/arithma_core/src/geometry/: intersection.rs  line.rs  mod.rs  plane.rs  sphere.rs  vector.rs
rust/arithma_core/src/lookup/: math_hash.rs  mod.rs  trig_hash.rs
rust/arithma_core/src/numerical/: critical_points.rs  interval_analysis.rs  methods.rs  mod.rs  root_finding.rs
rust/arithma_core/src/probabilities/: bernoulli.rs  binomial.rs  confidence_interval.rs  distribution_factory.rs  mod.rs  normal.rs  quantile_function.rs  statistical_moment.rs  statistical_sampler.rs
tests/: test_core.py  test_pyfacade.py
