[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "arithma"
version = "2.0.4"
description = "Arithma — symbolic mathematics engine (Python bindings)"
requires-python = ">=3.9"
authors = [
    { name = "Andrew Keith Watts", email = "AndrewKWatts@gmail.com" },
]
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
arithma-app = "arithma._launcher:launch"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.maturin]
manifest-path = "rust/arithma_core/Cargo.toml"
features = ["python"]
module-name = "arithma._arithma_core"
python-source = "python"
