[package]
name = "arithma_core"
version = "2.0.1"
edition = "2021"
description = "Arithma — symbolic mathematics engine"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
python = ["pyo3"]
cpp-support = []
rust-support = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
thiserror = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
